<resources>
    <string name="app_name">ChallengeChapter4</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="email_address">Email Address</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="logout">Logout</string>
    <string name="welcome_user">Welcome,</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="hello">Hello</string>
    <string name="name">name</string>
    <string name="input">Input</string>
    <string name="add_note">Add Note</string>
    <string name="delete_note">Delete Note</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="login_here">Login here</string>
    <string name="welcome_back_you_ve_been_missed">Welcome back you’ve been missed!</string>
    <string name="sign_in">Sign In</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="create_account">Create Account</string>
    <string name="create_an_account_so_you_can_save_your_notes">Create an account so you can save your notes</string>
    <string name="already_have_an_account">Already have an account</string>
    <string name="start_your_notes">Start your notes</string>
    <string name="insert">Insert</string>
</resources>